# mini-trello

./: .gitignore  package-lock.json  pyproject.toml  tailwind.config.js
app/: __init__.py
app/db/: load_data.py  setup_dynamodb.py  utils.py
app/graphql/: mutations.py  schema.py  test_data.py  types.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/Icons/: AddIcon.jsx  DeleteIcon.jsx
frontend/src/components/: Board.jsx  List.jsx  Task.jsx
frontend/src/graphql/: mutations.js  queries.js
frontend/src/hooks/: useCreateList.js  useCreateTask.js  useDeleteList.js  useDeleteTask.js  useGetData.js  useGetLists.js  useGetTasks.js  useSwapListOrder.js  useSwapTaskOrder.js  useUpdateList.js  useUpdateTask.js
src/: App.css
src/Icons/: AddIcon.jsx
src/components/: Board.jsx  List.jsx  Task.jsx
